<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/video_window_background"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gray_corner_dp25"
        android:enabled="false"
        android:paddingLeft="@dimen/dp40"
        android:paddingRight="@dimen/dp40"
        android:text="@string/enter_room"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <EditText
        android:id="@+id/tv_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:layout_margin="@dimen/dp10"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:padding="@dimen/dp7"
        android:background="@drawable/bg_gray_corner_dp5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_permission_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_blue"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp25"
        android:textColor="@android:color/white"
        android:text="@string/open_permission_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/bt_permission_micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp25"
        android:textColor="@android:color/white"
        android:text="@string/open_permission_micro"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_blue"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_permission_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>