<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_dialog"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_marginTop="@dimen/dp15"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/resolution"
            android:id="@+id/tv_resolution"
            android:layout_marginTop="7dp"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/resolution_group"
            android:layout_width="match_parent"
            android:layout_toRightOf="@id/tv_resolution"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_360"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="360P"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/rb_480"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="480P"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/rb_540"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="540P"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/rb_720"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="720P"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/rb_1080"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:checked="false"
                android:text="1080P"
                android:textSize="10sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rotation_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resolution_group"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/screenOrientation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="" />

            <RadioButton
                android:id="@+id/screenOrientation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/audio_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rotation_group"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/front_camera_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/resolution_group"
                android:checked="true"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_frame_rate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/audio_group"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/fps" />

            <com.example.livepushclient.view.XEditText
                android:id="@+id/et_frame_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:hint="@string/fps_hint"
                android:inputType="number"
                android:text="15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_frame_rate"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/min_bitrate" />

                <com.example.livepushclient.view.XEditText
                    android:id="@+id/et_min_bitrate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="0～800"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="600" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_bitrate" />

                <com.example.livepushclient.view.XEditText
                    android:id="@+id/et_max_bitrate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.30"
                    android:hint="800～2000"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="1300" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bitrate1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_bitrate"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_bitrate" />

                <com.example.livepushclient.view.XEditText
                    android:id="@+id/et_init_bitrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:hint="大于等于600"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="1300" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_below="@id/layout_bitrate1"
            android:layout_width="wrap_content"
            android:text="@string/network"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:layout_marginLeft="30dp"
            android:id="@+id/rg_network"
            android:layout_below="@id/layout_bitrate1"
            android:layout_width="match_parent"
            android:layout_toRightOf="@id/tv_resolution"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="开发环境"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/rb_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="测试环境"
                android:textSize="10sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:text="美颜级别:"
            android:id="@+id/tv_beauty"
            android:layout_marginTop="5dp"
            android:layout_below="@id/rg_network"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/tv_beauty" />


    </RelativeLayout>
</ScrollView>
